Fixes missing english translation + removes Lombok from package

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -479,6 +479,7 @@ ModeManager.deleteMessage.confirm=Do you really want to delete this payment mode
 ModeManager.deleteMessage.title=Deletion of payment mode in use 
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, delete or edit accounts, categories etc. 
+AdministrationPlugIn.toolTip.checkbookAlert=Warning, one or more accounts are running out of checks
 
 StatisticsPlugin.bar.debts=Expenses
 StatisticsPlugin.bar.empty=No transactions found through the current filter
@@ -688,7 +689,17 @@ checkbookDialog.finished.createNew=Create a new book
 checkbookDialog.finished.delete=Delete the checkbook
 checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 
+checkbookAlertsPreferencesDialog.Title=Alert preferences management
+checkbookAlertsPreferencesDialog.Help=<html>Using this window you can choose if you want to be notified when one or more booklets are running out.<br>If this warning is enabled you will see the warning icon appear on the side on the <b>{0}</b> tab.</html>
+checkbookAlertsPreferencesDialog.State=Enable alerts:
+checkbookAlertsPreferencesDialog.State.tooltip=Enable or disable checking the amount of checks remaining
+checkbookAlertsPreferencesDialog.Value=Minimum threshold to be notified:
 
+checkbookAlertsPreferencesDialog.Value.tooltip=Define the threshold below which you would like to receive the alert
+checkbookAlertsPreferencesDialog.error.valueIsBlank=Disabled because the value of threshold is invalid
+
+checkbookAlertsWidget.openPreferencesDialog=Alert settings
+checkbookAlertsWidget.openPreferencesDialog.tooltip=Allows you to set when warning is raised when checkbooks are running out
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
