Implementation of the development mentioned in issue #7

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -590,6 +590,14 @@ ExportComponent.export=Export
 ExportComponent.export.toolTip=Exports this table as a text file
 ExportComponent.exportAs=In format {0} (.{1})
 
+ExportAccessoryPanel.title=Export preferences
+ExportAccessoryPanel.formatting=Formatting
+ExportAccessoryPanel.formatting.title=Include title
+ExportAccessoryPanel.formatting.startBalance=Include start balance
+ExportAccessoryPanel.formatting.endBalance=Include end balance
+ExportAccessoryPanel.style=Style
+ExportAccessoryPanel.style.css=Custom CSS file:
+
 BudgetPanel.title=Budget
 BudgetPanel.tooltip=Distribution of receipts and expenses of the month/year
 BudgetPanel.filter=Filter
@@ -629,6 +637,8 @@ ExportDialog.headerCheckbox=Include column headers
 ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
 ExportDialog.includeInitialBalanceCheckBox=Include initial balance
 ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include transactions simulated to reflect the initial balance
+ExportDialog.includeFinalBalanceCheckBox=Include final balance
+ExportDialog.includeFinalBalanceCheckBox.toolTip=Check this box to include transactions simulated to reflect the final balance
 ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
 ExportDialog.nothingToExport=You must select at least one field to export
 ExportDialog.done=Export done
