Various improvements on the html export flow

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -595,8 +595,15 @@ ExportAccessoryPanel.formatting=Formatting
 ExportAccessoryPanel.formatting.title=Include title
 ExportAccessoryPanel.formatting.startBalance=Include start balance
 ExportAccessoryPanel.formatting.endBalance=Include end balance
-ExportAccessoryPanel.style=Style
+ExportAccessoryPanel.style.title=Style
+ExportAccessoryPanel.style.css.title=Path / URL of the CSS
 ExportAccessoryPanel.style.css=Custom CSS file:
+ExportAccessoryPanel.style.css.type.none=No files
+ExportAccessoryPanel.style.css.type.local=Local file
+ExportAccessoryPanel.style.css.type.remote=Online file (ftp, http, https)
+ExportAccessoryPanel.style.css.helpButton.toolTip=Opens a guide on the functionality of including a custom CSS
+ExportAccessoryPanel.errorMessage=<html><b>WARNING:</b>This parameter is not valid, will be ignored!</html>
+ExportAccessoryPanel.errorMessage.tooltip=Check if the file exist and is readable also verify the selected Internet protocol is supported by this function
 
 BudgetPanel.title=Budget
 BudgetPanel.tooltip=Distribution of receipts and expenses of the month/year
