--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.fathzer</groupId>
 	<artifactId>yapbam</artifactId>
-	<version>0.21.3</version>
+	<version>0.21.4</version>
 	<properties>
-		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
-		<mainClass>net.yapbam.gui.Launcher</mainClass>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<mainClass>com.fathzer.launcher.Launcher</mainClass>
+		<maven.install.skip>true</maven.install.skip>
+		<maven.deploy.skip>true</maven.deploy.skip>
 		<sonar.organization>yapbam</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
@@ -78,37 +80,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<encoding>ISO-8859-1</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>animal-sniffer-maven-plugin</artifactId>
-				<version>1.22</version>
-				<configuration>
-					<signature>
-						<groupId>org.codehaus.mojo.signature</groupId>
-						<artifactId>java16</artifactId>
-						<version>1.0</version>
-					</signature>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>test</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -123,7 +97,7 @@
 						<configuration>
 							<rules>
 								<enforceBytecodeVersion>
-									<maxJdkVersion>1.6</maxJdkVersion>
+									<maxJdkVersion>1.8</maxJdkVersion>
 									<ignoredScopes>
 										<ignoreScope>test</ignoreScope>
 									</ignoredScopes>
@@ -165,7 +139,7 @@
 								</filter>
 								<filter>
 									<!-- include Launcher -->
-									<artifact>com.fathzer:yapbam-launcher</artifact>
+									<artifact>com.fathzer:java-check-launcher</artifact>
 									<includes>
 										<include>**</include>
 									</includes>
@@ -225,31 +199,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--plugin>
-				<artifactId>maven-jarsigner-plugin</artifactId>
-				<version>1.2</version>
-				<executions>
-					<execution>
-						<id>sign</id>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<archiveDirectory>${project.build.directory}</archiveDirectory>
-					<includes>
-						<include>${customized.jar.name}.jar</include>
-					</includes-->
-					<!-- keystore and password should be defined in the settings.xml file 
-						example: <profile> <id>yapbam</id> ... <properties> <yapbam.keystore.pwd>the 
-						keystore pwd</yapbam.keystore.pwd> </properties> </profile>
-					-->
-					<!--keystore>${yapbam.keystore}</keystore>
-					<storepass>${yapbam.keystore.pwd}</storepass>
-					<alias>fathzer</alias>
-				</configuration>
-			</plugin-->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.5.4</version>
@@ -270,32 +219,23 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
 			<groupId>com.fathzer</groupId>
+			<artifactId>java-check-launcher</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fathzer</groupId>
 			<artifactId>ajlib</artifactId>
-			<version>0.3.14</version>
+			<version>0.3.16</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fathzer</groupId>
 			<artifactId>javaluator</artifactId>
-			<version>3.0.3</version>
+			<version>3.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fathzer</groupId>
@@ -331,12 +271,7 @@
 		<dependency>
 			<groupId>com.fathzer</groupId>
 			<artifactId>jclop-dropbox2</artifactId>
-			<version>0.1.6</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fathzer</groupId>
-			<artifactId>yapbam-launcher</artifactId>
-			<version>1.0.1</version>
+			<version>0.1.7</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
