--- a/pom.xml
+++ b/pom.xml
@@ -186,8 +186,8 @@
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>${mainClass}</mainClass>
 									<manifestEntries>
-										<Main-Class>${mainClass}</Main-Class>
 										<SplashScreen-Image>net/yapbam/gui/images/splash.png</SplashScreen-Image>
 										<Permissions>all-permissions</Permissions>
 										<Application-Name>Yapbam</Application-Name>
@@ -295,12 +295,6 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.0</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.42</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
